# kaohe

QRCode/: CMakeLists.txt
QRCode/src/: main.cpp
RGB2NV12/: CMakeLists.txt
RGB2NV12/include/: nv122rgb.h  rgb2nv12.h
RGB2NV12/src/: main.cpp  nv122rgb.cpp  rgb2nv12.cpp
joint/: test.ipynb.py  test1.ipynb.py
qr/src/: main.cpp
qr_code/: demo.py  test.py  train.py
